# duckpack

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: diff.rs  ide.rs  main.rs  tui.rs
