[package]
name = "duckdb_projects"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
duckdb = { version = "1.10504.0", features = ["bundled"] }
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["full"] }
