[package]
name = "duckpack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = "0.28.1"
dotenvy = "0.15.7"
duckdb = { version = "1.10504.0", features = ["bundled"] }
ratatui = "0.29.0"
regex = "1.13.1"
similar = "3.1.1"
sqlformat = "0.5.0"
strsim = "0.10.0"
tokio = { version = "1.52.3", features = ["full"] }
tui-textarea = { version = "0.7.0", features = ["search"] }
